--- a/index.html
+++ b/index.html
@@ -439,7 +439,7 @@
             // Create mailto link
             const subject = encodeURIComponent(`Contact from ${name}`);
             const body = encodeURIComponent(`Name: ${name}\nEmail: ${email}\nPhone: ${phone}\n\nMessage:\n${message}`);
-            const mailtoLink = `mailto:your-email@example.com?subject=${subject}&body=${body}`;
+            const mailtoLink = `mailto:derekduzan@gmail.com?subject=${subject}&body=${body}`;
             
             // Open email client
             window.location.href = mailtoLink;
